<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.chromium.latency.walt.DiagnosticsFragment">

    <!-- The whole list of options -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <!-- Reconnect -->
            <LinearLayout
                style="@style/MenuItemStyle"
                android:onClick="onClickReconnect">

                <ImageView
                    style="@style/MenuIconStyle"
                    android:src="@drawable/ic_usb_black_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        style="@style/MenuTextTop"
                        android:text="@string/reconnect" />

                    <TextView
                        style="@style/MenuTextBottom"
                        android:text="@string/tbd_conn_status" />


                </LinearLayout>
            </LinearLayout>
            <!-- End of Reconnect -->

            <View style="@style/MenuDivider" />

            <!-- Ping -->
            <LinearLayout
                style="@style/MenuItemStyle"
                android:onClick="onClickPing">

                <ImageView
                    style="@style/MenuIconStyle"
                    android:src="@drawable/ic_swap_horiz_black_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        style="@style/MenuTextTop"
                        android:text="@string/ping" />

                    <TextView
                        style="@style/MenuTextBottom"
                        android:text="@string/ping_over_usb" />


                </LinearLayout>
            </LinearLayout>
            <!-- End of Ping -->

            <View style="@style/MenuDivider" />

            <!-- ReSync -->
            <LinearLayout
                style="@style/MenuItemStyle"
                android:onClick="onClickSync">

                <ImageView
                    style="@style/MenuIconStyle"
                    android:src="@drawable/ic_schedule_black_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        style="@style/MenuTextTop"
                        android:text="@string/resync_clocks" />

                    <TextView
                        style="@style/MenuTextBottom"
                        android:text="@string/three_point" />


                </LinearLayout>
            </LinearLayout>
            <!-- End of ReSync -->

            <View style="@style/MenuDivider" />

            <!-- CheckDrift -->
            <LinearLayout
                style="@style/MenuItemStyle"
                android:onClick="onClickCheckDrift">

                <ImageView
                    style="@style/MenuIconStyle"
                    android:src="@drawable/ic_timelapse_black_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        style="@style/MenuTextTop"
                        android:text="@string/check_clock_drift" />

                    <TextView
                        style="@style/MenuTextBottom"
                        android:text="@string/check_clocks_num" />


                </LinearLayout>
            </LinearLayout>
            <!-- End of CheckDrift -->

            <View style="@style/MenuDivider" />

            <!-- Start/stop listener -->
            <LinearLayout
                style="@style/MenuItemStyle"
                android:onClick="onClickStartListener">

                <ImageView
                    style="@style/MenuIconStyle"
                    android:src="@drawable/ic_swap_horiz_black_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        style="@style/MenuTextTop"
                        android:text="@string/start_stop_listener" />

                    <TextView
                        style="@style/MenuTextBottom"
                        android:text="@string/three_point" />


                </LinearLayout>
            </LinearLayout>
            <!-- End of Start/stop listener -->

            <View style="@style/MenuDivider" />

            <!-- Send T TODO: replace with send any char, it says nothing on the log, broadcast? -->
            <!--
            <LinearLayout
                style="@style/MenuItemStyle"
                android:onClick="onClickSendT">

                <ImageView
                    style="@style/MenuIconStyle"
                    android:src="@drawable/ic_swap_horiz_black_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        style="@style/MenuTextTop"
                        android:text="Send 'T'" />

                    <TextView
                        style="@style/MenuTextBottom"
                        android:text="..." />


                </LinearLayout>
            </LinearLayout>
            -->
            <!-- End of Send T -->


            <View style="@style/MenuDivider" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/txt_log_diag"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#BBBBBB"
        android:gravity="bottom"
        android:scrollbars="vertical" />

</LinearLayout>
