<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.chromium.latency.walt.FrontPageFragment">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <!-- The whole list of options -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Diagnostics -->
            <LinearLayout
                style="@style/MenuItemStyle"
                android:onClick="onClickClockSync">

                <ImageView
                    style="@style/MenuIconStyle"
                    android:src="@drawable/ic_schedule_black_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        style="@style/MenuTextTop"
                        android:text="@string/clock_sync" />

                    <TextView
                        style="@style/MenuTextBottom"
                        android:text="@string/tbd_conn_sync_status" />


                </LinearLayout>
            </LinearLayout>
            <!-- End of Diagnostics -->

            <View style="@style/MenuDivider" />

            <!-- Tap latency -->
            <LinearLayout
                style="@style/MenuItemStyle"
                android:onClick="onClickTapLatency">

                <ImageView
                    style="@style/MenuIconStyle"
                    android:src="@drawable/ic_radio_button_checked_black_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        style="@style/MenuTextTop"
                        android:text="@string/tap_latency" />

                    <TextView
                        style="@style/MenuTextBottom"
                        android:text="@string/click_to_measure" />


                </LinearLayout>
            </LinearLayout>
            <!-- End of Tap latency -->

            <View style="@style/MenuDivider" />

            <!-- Drag latency -->
            <LinearLayout
                style="@style/MenuItemStyle"
                android:onClick="onClickDragLatency">

                <ImageView
                    style="@style/MenuIconStyle"
                    android:src="@drawable/ic_swap_vert_black_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        style="@style/MenuTextTop"
                        android:text="@string/drag_latency" />

                    <TextView
                        style="@style/MenuTextBottom"
                        android:text="@string/click_to_measure" />


                </LinearLayout>
            </LinearLayout>
            <!-- End drag latency -->

            <View style="@style/MenuDivider" />

            <!-- Screen response -->
            <LinearLayout
                style="@style/MenuItemStyle"
                android:onClick="onClickScreenResponse">

                <ImageView
                    style="@style/MenuIconStyle"
                    android:src="@drawable/ic_brightness_medium_black_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        style="@style/MenuTextTop"
                        android:text="@string/screen_response" />

                    <TextView
                        style="@style/MenuTextBottom"
                        android:text="@string/click_to_measure" />


                </LinearLayout>
            </LinearLayout>
            <!-- End of Screen response  -->

            <View style="@style/MenuDivider" />

            <!-- Audio -->
            <LinearLayout
                style="@style/MenuItemStyle"
                android:onClick="onClickAudio">

                <ImageView
                    style="@style/MenuIconStyle"
                    android:src="@drawable/ic_volume_up_black_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        style="@style/MenuTextTop"
                        android:text="@string/audio_latency" />

                    <TextView
                        style="@style/MenuTextBottom"
                        android:text="@string/click_to_measure" />


                </LinearLayout>
            </LinearLayout>
            <!-- End of Audio  -->

            <View style="@style/MenuDivider" />

            <!-- Log -->
            <LinearLayout
                style="@style/MenuItemStyle"
                android:onClick="onClickOpenLog">

                <ImageView
                    style="@style/MenuIconStyle"
                    android:src="@drawable/ic_receipt_black_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        style="@style/MenuTextTop"
                        android:text="@string/view_log" />

                </LinearLayout>
            </LinearLayout>
            <!-- End of Log -->

            <View style="@style/MenuDivider" />

            <!-- Settings -->
            <LinearLayout
                style="@style/MenuItemStyle"
                android:onClick="onClickOpenLog">

                <ImageView
                    style="@style/MenuIconStyle"
                    android:src="@drawable/ic_settings_black_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        style="@style/MenuTextTop"
                        android:text="@string/settings" />


                </LinearLayout>
            </LinearLayout>
            <!-- End of Settings -->

            <View style="@style/MenuDivider" />

            <!-- About / Help -->
            <LinearLayout
                style="@style/MenuItemStyle"
                android:onClick="onClickOpenLog">

                <ImageView
                    style="@style/MenuIconStyle"
                    android:src="@drawable/ic_help_outline_black_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        style="@style/MenuTextTop"
                        android:text="@string/about" />

                </LinearLayout>
            </LinearLayout>
            <!-- End of About -->


        </LinearLayout>
    </ScrollView>
</FrameLayout>
